tdf#100907: Cannot set white background for hatching

Change-Id: Id10cb4d90a19717b44d02064eb69981c69a421de